# service

./: .gitignore  Cargo.toml  README.md
crates/models/: Cargo.toml  README.md
crates/models/migrations/2024-05-09-193334_create_posts/: up.sql
crates/models/src/: lib.rs  post.rs
crates/service/: Cargo.toml  README.md  tailwind.config.js
crates/service/src/: lib.rs  main.rs
crates/service/static/: styles.css
crates/service/templates/: base.jinja2  base_with_header.jinja2  home.jinja2
crates/service/tests/: tests.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
