[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# project crates
models = { path = "../models" }

# logging
slog = "2.7.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# async runtime
tokio.workspace = true
tokio-util = "0.7.8" # for cancellation tokens and graceful shutdown
# internet is byte streams
hyper = { version = "1.1.0", features = ["full"] }
# some bytes are hypertext
axum = { version = "0.7.5", features = ["form", "ws"] }
axum-extra = { version = "0.9", features = ["cookie", "form"] }

# for static files serving
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }

# templating
serde.workspace = true
serde_json = "1.0.68"

tera = "1.19.1"
anyhow.workspace = true
dotenvy = "0.15.7"

diesel.workspace = true

getrandom = { version = "0.2.10", features = ["js"]}
pico-args.workspace = true
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
futures = "0.3.30"

[dev-dependencies]
axum-test = "13.1.1"
reqwest = "0.12.5"

[features]
reload = []
